update conf file

--- a/itamae/cookbooks/springboot-zdtd/files/var/zdtd/zdtd-8081.conf
+++ b/itamae/cookbooks/springboot-zdtd/files/var/zdtd/zdtd-8081.conf
@@ -1,1 +1,4 @@
+
+PID_FOLDER=/var/zdtd/run
+LOG_FOLDER=/var/zdtd/log
 JAVA_OPTS="-Xmx64M -Djava.security.egd=file:///dev/./urandom -Dserver.port=8081"
