--- a/itamae/cookbooks/nginx/files/etc/nginx/nginx.conf
+++ b/itamae/cookbooks/nginx/files/etc/nginx/nginx.conf
@@ -2,7 +2,7 @@ worker_processes 1;
 events {
     worker_connections  100;
 }
-error_log  /var/log/nginx/error.log;
+error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 
